# cellular-automaton-in-haskell

./: README.md
game-of-life/: GameOfLife.hs  README.md  demo  game-of-life.cabal  gosper-glider-gun  package.yaml  pentadecathlon  stack.yaml
game-of-life/app/: Main.hs
game-of-life/patterns/: blinker  tumbler
game-of-life/src/: Lib.hs
wireworld/: README.md  WireWorld.hs  demo  demo-and  demo-or  or  package.yaml  stack.yaml  wireworld.cabal
wireworld/app/: Main.hs
wireworld/patterns/: and  demo
wireworld/src/: Lib.hs
