cabal-version: 1.12

name:           game-of-life
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-game-of-life#readme>
homepage:       https://github.com/bergsans/cellular-automaton-in-haskell/game-of-life#readme
bug-reports:    https://github.com/bergsans/cellular-automaton-in-haskell/issues
author:         Claes-Magnus Berg
maintainer:     claes-magnus@herebeseaswines.net
copyright:      2020 Claes-Magnus Berg
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/bergsans/cellular-automaton-in-haskell/game-of-life

library
  exposed-modules:
      Lib
  other-modules:
      Paths_game_of_life
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ncurses
  default-language: Haskell2010

executable game-of-life-exe
  main-is: Main.hs
  other-modules:
      Paths_game_of_life
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , game-of-life
    , ncurses
  default-language: Haskell2010

test-suite game-of-life-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_game_of_life
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , haskell-game-of-life
  default-language: Haskell2010
