cabal-version: 1.12
name:           wireworld
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/bergsans/cellular-automaton-in-haskell/wireworld#readme>
homepage:       https://github.com/bergsans/cellular-automaton-in-haskell/wireworld#readme
bug-reports:    https://github.com/bergsans/cellular-automaton-in-haskell/issues
author:         Claes-Magnus Berg
maintainer:     claes-magnus@herebeseaswines.net
copyright:      MIT
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/bergsans/cellular-automaton-in-haskell/wireworld

library
  exposed-modules:
      Lib
  other-modules:
      Paths_wireworld
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ncurses
  default-language: Haskell2010

executable wireworld-exe
  main-is: Main.hs
  other-modules:
      Paths_wireworld
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , wireworld
    , ncurses
  default-language: Haskell2010

test-suite wireworld-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_wireworld
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , wireworld
  default-language: Haskell2010
